--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "author": "storycoding",
   "license": "ISC",
   "dependencies": {
-    "express": "latest",
     "body-parser": "latest",
+    "express": "latest",
+    "express-ws": "^4.0.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
