--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "dependencies": {
     "body-parser": "latest",
     "express": "latest",
-    "express-ws": "^4.0.0",
+    "http": "0.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "ws": "^7.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -27,7 +28,7 @@
     "webpack-dev-server": "^3.7.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "npm run build && nodemon server",
     "build": "webpack",
     "start": "node server"
   }
