--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "http": "0.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "uuid": "^3.3.2",
-    "ws": "^7.1.1"
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
