--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "latest",
+    "cluster": "^0.7.7",
     "express": "latest",
     "http": "0.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "sticky-session": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
